syntax = "proto3";

option java_package = "io.kafkamate";

package messages;

message ConsumeRequest {
  string clusterId = 1;
  string topicName = 2;
  uint64 maxResults = 3;
  string offsetStrategy = 4;
  string filterKeyword = 5;
  MessageFormat messageFormat = 6;
}

enum MessageFormat {
  STRING = 0;
  PROTOBUF = 1;
}

message ProduceRequest {
  string clusterId = 1;
  string topicName = 2;
  string key = 3;
  string value = 4;
}

message ProduceResponse {
  string status = 1;
}

message Message {
  uint64 offset = 1;
  int32 partition = 2;
  uint64 timestamp = 3;
  string key = 4;
  string value = 5;
}

service MessagesService {
  rpc ProduceMessage(ProduceRequest) returns (ProduceResponse);

  rpc ConsumeMessages(ConsumeRequest) returns (stream Message);
}